# emc-msdft-check

./: .gitignore  CMakeLists.txt  Coupled_solver.f90  Coupling.f90  Coupling_update.f90  Date_time.f90  Davidson.f90  Derivaties.f90  Derivaties_deltaR.f90  Energy_gen.f90  Grouptable.f90  HFenergy.f90  INT_BASIS.f90  Input.f90  MSDFT_1-2RDM.f90  MSDFT_BLWCAS.f90  MSDFT_CHECKFILE.f90  MSDFT_COMB.f90  MSDFT_ENG.f90  MSDFT_EXCR.f90  MSDFT_FC.f90  MSDFT_INT.f90  MSDFT_MAIN.f90  MSDFT_METHOD100.f90  MSDFT_RDINCAR.f90  MSDFT_READGEOM.f90  MSDFT_TQL.f90  MSDFT_TrRAM.f90  Makefile  NonLinear.f90  PreDMRGLR.f90  PreOneSCF.f90  README.md  Redundancies.f90  Run_DMRG.f90  Scf_save.f90  Solver_Augmented_Hessian.f90  Solver_Hessian.f90  Solver_LR_partition.f90  Transform_INT.f90  (+7 more)
BASIS/: 6-31G.bas  aug-cc-pVDZ.bas  cc-pVTZ.bas
INT_XC/: INT_BASIS.f90  XC_DFTFC.f90  XC_ZETA.f90  program.f90
INT_XC/src/: INTXC_MOD.f90  Makefile  XC_DFT.f90  XC_DFTFC.f90  XC_KMCF.f90  program.f90
INT_XC/test/: 2PA  DETs  GEOM.xyz  INT_MO  PAPB  PB  aug-cc-pVDZ.bas
MSDFT/: MSDFT_1-2RDM.f90  MSDFT_BLWCAS.f90  MSDFT_CHECKFILE.f90  MSDFT_ENG.f90  MSDFT_EXCR.f90  MSDFT_GENDETMO.f90  MSDFT_INT.f90  MSDFT_MCCONF.f90  MSDFT_MCFILE.f90  MSDFT_MCHAM.f90  MSDFT_METHOD100.f90  MSDFT_METHOD101.f90  MSDFT_PUTINT.f90  MSDFT_RDINCAR.f90  MSDFT_READGEOM.f90  MSDFT_UPDATE.f90
ORBOPT/: Closed_Shell.f90  ConDMRGLR.f90  Coupling_terms.f90  Environment.f90  Fock_gen.f90  Global_control.f90  Integrals.f90  Iteration.f90  LagrangeRDMs.f90  Mathlib.f90  Matrix.f90  Operator_update.f90  Operator_update_CPNR.f90  Operator_update_LR.f90  Orbital_Hessian.f90  PmultU.f90  Precabb.f90  Precaii.f90  SCFORBOPT.f90  SCF_orbopt.f90  Solver_LR.f90  Transform_Nindex.f90  Y_gen.f90  orbopt_header.f90  orbopt_version.f90
TOOLS/: GAMESS_MSDFT.f90  GEOM.xyz  INPUT  MAIN.f90  MOLPROtoGAMESS.f90  Makefile  cc-pVDZ.bas  output  tmp
cmake/: FortranFlags.cmake
cmake/math/: MathLibs.cmake  MathLibsFunctions.cmake
example/: 6-31G.bas  DETs  GEOM.xyz  HAM.tmp  INCAR  INCAR-CAS  INCAR-MSDFT  INCAR-T  INT_MO  Submit_jobs  cc-pVQZ.bas  infile.inp  oneRDM.0.0  twoRDM.0.0  vMSDFT.out
example/Gaussian/: GEOM-test-qz.gjf  GEOM-test.gjf  GEOMH2-test-dz.gjf  geom-qz.chk  geom.chk
example/gamess/: .test-geomH2-631g.log.swp  GEOM.xyz  test-geom-ccd.inp  test-geom.inp  test-geomH2-631g.inp  test-geomH2-ccd.inp
input-files/: infile.inp
input-files/ImproveSCF/: dmrg-input  infile.inp  rdmsave_su2.py
input-files/ImproveSCF-benzen/: INTEGRAL_ORDER_2_IRREPS.grp  INTEGRAL_ORDER_8_IRREPS.grp  infile.inp  orb_opt
input-files/LR_test_H2_inputs/: FCIDUMP_ACTIVE  FCIDUMP_OLD  dmrg-input1  dmrg-input1_LR-L  dmrg-input2  dmrg-input2_LR-L  dmrg-input2_SP-deriL  dmrg-input2_SP-deriR  dmrg-input_TDM_2_1  fort.1  fort.2  fort.3  fort.30  infile.inp  info_line.tmp  rdm_ckp_operate1  rdms-deri_stat  run_dmrg
input-files/draft_inputs/LiH_2e3o_S1/: LiH_CI-MPS_S1_opt_AG.input  LiH_MPS_S1_opt.input  LiH_RASSCF.RasOrb  LiH_RASSCF.input  LiH_S1_opt.input
input-files/draft_inputs/LiH_2e3o_S1/LR_inputs_CIMPS_AG/: dmrg-input1  dmrg-input1_Hami_gen  dmrg-input1_LR-L  dmrg-input1_LR-R  dmrg-input1_SP-deriL  dmrg-input1_SP-deriR  dmrg-input2  dmrg-input2_Hami_gen  dmrg-input2_LR-R  dmrg-input2_deriL  dmrg-input2_deriR  dmrg-input_TDM_1_2  dmrg-input_TDM_2_1  infile.inp
input-files/phase_issue_examples/: Readme.md
input-files/phase_issue_examples/H2_2e2o/: H2_opt_1-iter.inp  H2_opt_mps_1-iter.inp  test1_opt.RasOrb
input-files/phase_issue_examples/H2_2e2o/LR_inputs/: dmrg-input1_Hami_gen  dmrg-input1_LR-R  dmrg-input1_SP-deriL  dmrg-input1_SP-deriR  dmrg-input2_Hami_gen  dmrg-input2_LR-R  dmrg-input_TDM_1_2  infile.inp
input-files/phase_issue_examples/LiH/: LiH.xyz  LiH_MPSCI_opt.input  LiH_RASCI_opt.input  LiH_RASSCF.RasOrb
input-files/phase_issue_examples/LiH/LR_inputs/: dmrg-input1  dmrg-input1_Hami_gen  dmrg-input1_LR-L  dmrg-input1_LR-R  dmrg-input1_SP-deriL  dmrg-input1_SP-deriR  dmrg-input2  dmrg-input2_Hami_gen  dmrg-input2_LR-L  dmrg-input2_LR-R  dmrg-input2_deriL  dmrg-input2_deriR  dmrg-input_TDM_1_2  dmrg-input_TDM_2_1  infile.inp
input-files/phase_issue_examples/NH3/: NH3_CI_opt_1-iter.inp  NH3_mps_opt_1-iter.inp  NH3_nosym.xyz
input-files/phase_issue_examples/NH3/LR_inputs/: dmrg-input1  dmrg-input1_Hami_gen  dmrg-input1_LR-L  dmrg-input1_LR-R  dmrg-input1_SP-deriL  dmrg-input1_SP-deriR  dmrg-input2  dmrg-input2_Hami_gen  dmrg-input2_LR-L  dmrg-input2_LR-R  dmrg-input2_deriL  dmrg-input2_deriR  dmrg-input_TDM_1_2  dmrg-input_TDM_2_1  infile.inp
input-files/phase_issue_examples/dioxetonane_4e4o/: HF_opted_RASSCF_4e4o.RasOrb  SCF_opted.xyz  dio_opt_1-iter.input  dio_opt_mps_1-iter.input
input-files/phase_issue_examples/dioxetonane_4e4o/LR_inputs/: dmrg-input1  dmrg-input1_LR-L  dmrg-input1_LR-R  dmrg-input2_Hami_gen  dmrg-input2_deriL  dmrg-input2_deriR
input-files/phase_issue_examples/dioxetonane_4e4o_STO3G/: N15.xyz  N15_STO3G_RASSCF.RasOrb  N15_STO3G_opt_MPS.input  N15_STO3G_opt_RASCI.input
input-files/phase_issue_examples/dioxetonane_4e4o_STO3G/LR_inputs/: INTEGRAL_ORDER_4_IRREPS.grp  dmrg-input1_Hami_gen  dmrg-input1_SP-deriL  dmrg-input1_SP-deriR  dmrg-input2  dmrg-input2_LR-L  dmrg-input2_LR-R  dmrg-input_TDM_1_2  dmrg-input_TDM_2_1  infile.inp
input-files/truncation_examples/BH3/4e3o/: BH3_RASSCF_4e3o.input  (+6 more)
input-files/truncation_examples/NH3/: NH3_mps_opt6e6o_1-iter.inp
src/: Closed_Shell.f90  ConDMRGLR.f90  Coupled_solver.f90  Coupling_terms.f90  Date_time.f90  Davidson.f90  Derivaties.f90  Derivaties_deltaR.f90  Energy_gen.f90  Environment.f90  Global_control.f90  Gmat_gen.f90  HFenergy.f90  Initial_value.f90  Input.f90  Integrals.f90  Iteration.f90  Iteration_ext.f90  LagrangeRDMs.f90  MAIN.f90  MPSci_update.f90  Mathlib.f90  Matrix.f90  NonLinear.f90  Orbital_Hessian.f90  PreDMRGLR.f90  PreOneSCF.f90  Precaii.f90  Print_info.f90  Redundancies.f90  Run_DMRG.f90  Scf_save.f90  Solver_Augmented_Hessian.f90  Solver_LR.f90  Solver_LR_partition.f90  Solver_WMK.f90  Solver_WMK2.f90  Solver_gmres.f90  Transform_INT.f90  Y_gen.f90  (+10 more)
(+74 files in other folders)
